Java Marine API - RELEASE NOTES
Version @VERSION@ (b@BUILD_ID@)
<http://ktuukkan.github.io/marine-api/>

This is a pre-alpha release, major API changes may be introduced in future
versions. Released on @RELEASE_DATE@.

CHANGES

 * SentenceReader; refactored to better support diffrent data sources. Includes
   some performance tweaks, should take less CPU now.

 * SentenceValidator; regular expression performance tweaks in.

 * TPVProvider and related classes renamed to PositionProvider.

 * GSASentence; getSatellitesIds() renamed to getSatelliteIds().
 
 * Time; handles now fractions of a second. Fixed also a bug in toDate() causing
   error in hour of day.
   
 * GLL, GGA, RMC and ZDA parsers; fractions of a second are now parsed and
   formatted in timestamp fields. When setting/formatting values, three decimals
   is used regardless of given precision (padded with zeros if needed).

 * SentenceId; added XDR.

NEW FEATURES

 * UDP/DatagramSocket support in SentenceReader.

 * SatelliteInfoProvider; reports all GPS satellite information in single event.
 
 * SentenceParser; reset() and setFieldCount(int) methods for resetting and
   adjusting the number of data fields.
 
 * Support for XDR sentence; transducer measurements.

KNOWN ISSUES

 * Position.distanceTo() may not produce correct results.
 
 * Proprietary sentences that have sentence ID different to five characters are
   not supported.

 * All AIS sentences may not be supported as TalkerId has only AI, AB and BS.

ACKNOWLEDGEMENTS

 * Thanks to Amanda Fenech (marssa.org) for migrating the project to Maven
   layout and initial release in repository (v0.5.1).
 
 * Thanks to Ludovic Drouineau for UDP implementation of SentenceReader.

 * Thanks to Robert Huitema (www.42.co.nz) and Vladimir Loginov for performance
   tweaks. Robert also provided the base work for XDR parser.